--- a/matoa/home.html
+++ b/matoa/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221221211732">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221224203212">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -127,7 +127,7 @@
 			</section>
 			<section class="page__monthly-deals monthly-deals">
 				<div class="monthly-deals__container">
-					<div class="monthly-deals__title title">Monthly Deals</div>
+					<h2 class="monthly-deals__title title">Monthly Deals</h2>
 					<div class="monthly-deals__items">
 						<div class="monthly-deals__item item-monthly-deals">
 							<div class="item-monthly-deals__image-ibg">
@@ -136,7 +136,7 @@
 							<div class="item-monthly-deals__body">
 								<a href="" class="item-monthly-deals__title">Singo Maple</a>
 								<div class="item-monthly-deals__sale">20% Off</div>
-								<div class="item-monthly-deals__old-price">Rp 1.500.000</div>
+								<div class="item-monthly-deals__old-price old-price">Rp 1.500.000</div>
 								<div class="item-monthly-deals__price">Rp 1.264.000</div>
 							</div>
 							<div class="item-monthly-deals__hidden">
@@ -154,7 +154,7 @@
 							<div class="item-monthly-deals__body">
 								<a href="" class="item-monthly-deals__title">Singo Ebony</a>
 								<div class="item-monthly-deals__sale">20% Off</div>
-								<div class="item-monthly-deals__old-price">Rp 1.500.000</div>
+								<div class="item-monthly-deals__old-price old-price">Rp 1.500.000</div>
 								<div class="item-monthly-deals__price">Rp 1.264.000</div>
 							</div>
 							<div class="item-monthly-deals__hidden">
@@ -172,7 +172,7 @@
 							<div class="item-monthly-deals__body">
 								<a href="" class="item-monthly-deals__title">Rakai Ebony</a>
 								<div class="item-monthly-deals__sale">15% Off</div>
-								<div class="item-monthly-deals__old-price">Rp 1.280.000</div>
+								<div class="item-monthly-deals__old-price old-price">Rp 1.280.000</div>
 								<div class="item-monthly-deals__price">Rp 1.118.000</div>
 							</div>
 							<div class="item-monthly-deals__hidden">
@@ -190,7 +190,7 @@
 							<div class="item-monthly-deals__body">
 								<a href="" class="item-monthly-deals__title">Way Kambas Mini Maple</a>
 								<div class="item-monthly-deals__sale">10% Off</div>
-								<div class="item-monthly-deals__old-price">Rp 1.280.000</div>
+								<div class="item-monthly-deals__old-price old-price">Rp 1.280.000</div>
 								<div class="item-monthly-deals__price">Rp 1.024.000</div>
 							</div>
 							<div class="item-monthly-deals__hidden">
@@ -205,83 +205,261 @@
 					</div>
 				</div>
 			</section>
-	</div>
-	</div>
-	</main>
-	<footer class="footer">
-		<div data-spollers="768, max" class="footer__container">
-			<div class="footer__column">
-				<a href="" class="footer__logo">
-					<picture><source srcset="img/footer/logo.webp" type="image/webp"><img src="img/footer/logo.png" alt="logo"></picture>
-				</a>
-				<div class="footer__block">
-					<div class="footer__label">
-						<h3 class="footer__title title-footer">Address</h3>
-						<div class="footer__text">
-							<p>Store & Office </p>
-							<p>Jl. Setrasari Kulon III, No. 10-12,</p>
-							<p>Sukarasa, Sukasari, Bandung, </p>
-							<p>Jawa Barat, Indonesia 40152</p>
+			<section class="page__news news">
+				<div class="news__container">
+					<h2 class="news__title title">Recent News</h2>
+					<div class="news__body">
+						<div class="news__item item-news">
+							<div class="item-news__subtitle">Where To Travel</div>
+							<div class="item-news__title">Matoa Where To Travel? Yogyakarta</div>
+							<div class="item-news__btn">
+								<button type="submit" class="opacity-button ">Discover</button>
+							</div>
 						</div>
-					</div>
-					<div class="footer__label">
-						<h3 class="footer__title title-footer">Office Hour</h3>
-						<div class="footer__text">
-							<p>Monday - Sunday </p>
-							<p>10.00 - 18.00</p>
+						<div class="news__image">
+							<picture><source srcset="img/news/01.webp" type="image/webp"><img src="img/news/01.jpg" alt="image"></picture>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="footer__column">
-				<button type="button" data-spoller class="footer__item title title--white _icon-select">Get in touch</button>
-				<div class="footer__contact-block">
-					<div class="footer__contact contact-footer">
-						<div class="contact-footer__label title-footer">Phone</div>
-						<a href="02220277564" class="contact-footer__value">0222-027-7564</a>
-						<div class="contact-footer__label title-footer">Service Center</div>
-						<a href="08112338899" class="contact-footer__value">0811-233-8899</a>
-						<div class="contact-footer__label title-footer">Customer Service</div>
-						<a href="08112359988" class="contact-footer__value">0811-235-9988</a>
-						<div class="footer__social">
-							<a href="" class="_icon-facebook"></a>
-							<a href="" class="_icon-instagram"></a>
-							<a href="" class="_icon-twitter"></a>
-							<a href="" class="_icon-youtube"></a>
+			</section>
+			<section class="page__model-line model-line">
+				<div class="model-line__container">
+					<div class="model-line__body">
+						<article class="model-line__column">
+							<h3 class="model-line__title title title--smile"><a href="">Maple Series</a></h3>
+							<div class="model-line__card card-model-line">
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/01.webp" type="image/webp"><img src="img/model-line/01.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Way Kambas Maple</a>
+										<div class="info__old-price old-price"></div>
+										<div class="info__price">Rp 1.280.000</div>
+									</div>
+								</div>
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/02.webp" type="image/webp"><img src="img/model-line/02.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Kaili</a>
+										<div class="info__old-price old-price"></div>
+										<div class="info__price">Rp 950.000</div>
+									</div>
+								</div>
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/03.webp" type="image/webp"><img src="img/model-line/03.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Sunda</a>
+										<div class="info__old-price old-price"></div>
+										<div class="info__price">Rp 1.170.000</div>
+									</div>
+								</div>
+							</div>
+						</article>
+						<article class="model-line__column">
+							<h3 class="model-line__title title title--smile"><a href="">Ebony Series</a></h3>
+							<div class="model-line__card card-model-line">
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/04.webp" type="image/webp"><img src="img/model-line/04.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Tomia Ebony</a>
+										<div class="info__old-price old-price">Rp 1.280.000</div>
+										<div class="info__price">Rp 1.280.000 </div>
+									</div>
+								</div>
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/05.webp" type="image/webp"><img src="img/model-line/05.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Mori</a>
+										<div class="info__old-price old-price"></div>
+										<div class="info__price">Rp 950.000</div>
+									</div>
+								</div>
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/06.webp" type="image/webp"><img src="img/model-line/06.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Alor</a>
+										<div class="info__old-price old-price"></div>
+										<div class="info__price">Rp 1.170.000</div>
+									</div>
+								</div>
+							</div>
+						</article>
+						<article class="model-line__column">
+							<h3 class="model-line__title title title--smile"><a href="">Featured</a></h3>
+							<div class="model-line__card card-model-line">
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/07.webp" type="image/webp"><img src="img/model-line/07.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Sikka (Ebony & Maple)</a>
+										<div class="info__old-price old-price"></div>
+										<div class="info__price">Rp 1.198.000</div>
+									</div>
+								</div>
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/08.webp" type="image/webp"><img src="img/model-line/08.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Lore Walnut</a>
+										<div class="info__old-price old-price"></div>
+										<div class="info__price">Rp 1.280.000</div>
+									</div>
+								</div>
+								<div class="card-model-line__body">
+									<a href="#" class="card-model-line__image-ibg_contain">
+										<picture><source srcset="img/model-line/09.webp" type="image/webp"><img src="img/model-line/09.png" alt="image"></picture>
+									</a>
+									<div class="card-model-line__info info">
+										<a href="#" class="info__mame">Way Kambas Limited Edition</a>
+										<div class="info__old-price old-price"></div>
+										<div class="info__price">Rp 1.170.000</div>
+									</div>
+								</div>
+							</div>
+						</article>
+					</div>
+					<div class="model-line__footer footer-model-line">
+						<div class="footer-model-line__body">
+							<button type="submit" class="footer-model-line__btn opacity-button opacity-button--h66">See
+								More</button>
 						</div>
 					</div>
 				</div>
+			</section>
+			<section class="page__testimonial testimonial">
+				<div class="testimonial__container">
+					<h2 class="testimonial__title title">Testimonials</h2>
+					<!-- Оболонка слайдера -->
+					<div class="testimonial__slider swiper">
+						<!-- Частина слайдера, що рухається -->
+						<div class="testimonial__wrapper swiper-wrapper">
+							<!-- Слайд -->
+							<div class="testimonial__slide slide-testimonial swiper-slide">
+								<div class="slide-testimonial__image">
+									<picture><source srcset="img/testimonial/image.webp" type="image/webp"><img src="img/testimonial/image.jpg" alt="image"></picture>
+								</div>
+								<div class="slide-testimonial__item">
+									<div class="slide-testimonial__text">Loving my new KAILI watch from @matoa_id, the first ever
+										Indonesian watch local brand that uses wood as their main material. Like any other Matoa
+										products, KAILI is inspired by Indonesian heritage.</div>
+									<div class="slide-testimonial__info">
+										<div class="slide-testimonial__name">Gita Savitri</div>
+										<div class="slide-testimonial__name-info">Content Creator/Influencer</div>
+									</div>
+								</div>
+							</div>
+							<!-- Слайд -->
+							<div class="testimonial__slide slide-testimonial swiper-slide">
+								<div class="slide-testimonial__image">
+									<picture><source srcset="img/testimonial/image.webp" type="image/webp"><img src="img/testimonial/image.jpg" alt="image"></picture>
+								</div>
+								<div class="slide-testimonial__item">
+									<div class="slide-testimonial__text">Loving my new KAILI watch from @matoa_id, the first ever
+										Indonesian watch local brand that uses wood as their main material. Like any other Matoa
+										products, KAILI is inspired by Indonesian heritage.</div>
+									<div class="slide-testimonial__info">
+										<div class="slide-testimonial__name">Gita Savitri</div>
+										<div class="slide-testimonial__name-info">Content Creator/Influencer</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- Якщо потрібна навігація (ліворуч/праворуч) -->
+						<div class="testimonial__arrow">
+							<button type="button" class="testimonial__prev _icon-arrow-slide"></button>
+							<button type="button" class="testimonial__next _icon-arrow-slide"></button>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
+			<div data-spollers="768, max" class="footer__container">
+				<div class="footer__column">
+					<a href="" class="footer__logo">
+						<picture><source srcset="img/footer/logo.webp" type="image/webp"><img src="img/footer/logo.png" alt="logo"></picture>
+					</a>
+					<div class="footer__block">
+						<div class="footer__label">
+							<h3 class="footer__title title-footer">Address</h3>
+							<div class="footer__text">
+								<p>Store & Office </p>
+								<p>Jl. Setrasari Kulon III, No. 10-12,</p>
+								<p>Sukarasa, Sukasari, Bandung, </p>
+								<p>Jawa Barat, Indonesia 40152</p>
+							</div>
+						</div>
+						<div class="footer__label">
+							<h3 class="footer__title title-footer">Office Hour</h3>
+							<div class="footer__text">
+								<p>Monday - Sunday </p>
+								<p>10.00 - 18.00</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="footer__column">
+					<button type="button" data-spoller class="footer__item title title--white _icon-select">Get in touch</button>
+					<div class="footer__contact-block">
+						<div class="footer__contact contact-footer">
+							<div class="contact-footer__label title-footer">Phone</div>
+							<a href="02220277564" class="contact-footer__value">0222-027-7564</a>
+							<div class="contact-footer__label title-footer">Service Center</div>
+							<a href="08112338899" class="contact-footer__value">0811-233-8899</a>
+							<div class="contact-footer__label title-footer">Customer Service</div>
+							<a href="08112359988" class="contact-footer__value">0811-235-9988</a>
+							<div class="footer__social">
+								<a href="" class="_icon-facebook"></a>
+								<a href="" class="_icon-instagram"></a>
+								<a href="" class="_icon-twitter"></a>
+								<a href="" class="_icon-youtube"></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="footer__column">
+					<button type="button" data-spoller class="footer__item title title--white _icon-select">Useful Link</button>
+					<nav class="footer__menu menu-footer">
+						<ul class="menu-footer__list">
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Warranty & Complaints</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Order & Shipping</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Tracking Order</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">About Us</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Repair</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Terms</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">FAQ</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="footer__column">
+					<button type="button" data-spoller class="footer__item title title--white _icon-select">Useful Link</button>
+					<nav class="footer__menu menu-footer">
+						<ul class="menu-footer__list">
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Mengenal Arti Cukup</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Tell Your Difference</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Waykambas</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Rebrand</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Gallery</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Singo</a></li>
+							<li class="menu-footer__item"><a href="" class="menu-footer__link">Rakai</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
-			<div class="footer__column">
-				<button type="button" data-spoller class="footer__item title title--white _icon-select">Useful Link</button>
-				<nav class="footer__menu menu-footer">
-					<ul class="menu-footer__list">
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Warranty & Complaints</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Order & Shipping</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Tracking Order</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">About Us</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Repair</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Terms</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">FAQ</a></li>
-					</ul>
-				</nav>
-			</div>
-			<div class="footer__column">
-				<button type="button" data-spoller class="footer__item title title--white _icon-select">Useful Link</button>
-				<nav class="footer__menu menu-footer">
-					<ul class="menu-footer__list">
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Mengenal Arti Cukup</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Tell Your Difference</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Waykambas</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Rebrand</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Gallery</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Singo</a></li>
-						<li class="menu-footer__item"><a href="" class="menu-footer__link">Rakai</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</footer>
+		</footer>
 	</div>
 	<div id="search" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
@@ -296,7 +474,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221221211732"></script>
+	<script src="js/app.min.js?_v=20221224203212"></script>
 </body>
 
 </html>
