--- a/matoa/index.html
+++ b/matoa/index.html
@@ -16,10 +16,13 @@
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Головна</a></li>
+			<li><a target="_blank" href="product.html">Сторінка товару</a></li>
+			<li><a target="_blank" href="checkout.html">Сторінка оплати</a></li>
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html#"></a></li>
+			<li><a target="_blank" href="home.html#search">Пошук</a></li>
+			<li><a target="_blank" href="home.html#product">Кошик</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за замовлення!</h2>
